[tool.poetry]
name = "web9"
version = "0.1.0"
description = ""
authors = ["Tetiana Kobzar <tkobzar.smm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
pymongo = {extras = ["srv", "tls"], version = "^4.7.2"}
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
